	* added support for storing per-peer rate limits across reconnects
	* improved fallocate support
	* fixed magnet link issue when using resume data
	* support disk I/O priority settings
	* added info_hash to torrent_deleted_alert
	* improved LSD performance and made the interval configurable
	* improved UDP tracker support by caching connect tokens

release 0.14.9

	* disabled feature to drop requests after having been skipped too many times
	* fixed range request bug for files larger than 2 GB in web seeds
	* don't crash when trying to create torrents with 0 files
	* fixed big_number __init__ in python bindings
	* fixed optimistic unchoke timer
	* fixed bug where torrents with incorrectly formatted web seed URLs would be
	  connected multiple times
	* fixed MinGW support
	* fixed DHT bootstrapping issue
	* fixed UDP over SOCKS5 issue
	* added support for "corrupt" tracker announce
	* made end-game mode less aggressive

release 0.14.8

	* ignore unkown metadata messages
	* fixed typo that would sometimes prevent queued torrents to be checked
	* fixed bug in auto-manager where active_downloads and active_seeds would
	  sometimes be used incorrectly
	* force_recheck() no longer crashes on torrents with no metadata
	* fixed broadcast socket regression from 0.14.7
	* fixed hang in NATPMP when shut down while waiting for a response
	* fixed some more error handling in bdecode

release 0.14.7

	* fixed deadlock in natpmp
	* resume data alerts are always posted, regardless of alert mask
	* added wait_for_alert to python binding
	* improved invalid filename character replacement
	* improved forward compatibility in DHT
	* added set_piece_hashes that takes a callback to the python binding
	* fixed division by zero in get_peer_info()
	* fixed bug where pieces may have been requested before the metadata
	  was received
	* fixed incorrect error when deleting files from a torrent where
	  not all files have been created